Update dashboard integration and period log UI

--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -5,6 +5,8 @@
     <a href="../pages/mood.html">Mood</a>
     <a href="../pages/insights.html">Insights</a>
     <a href="../pages/chatbot.html">Chatbot</a>
+    <a href="#" onclick="localStorage.removeItem('token'); window.location.href='login.html';">Logout</a>
+
 </div>
 
 <style>
