--- a/frontend/components/navbar.html
+++ b/frontend/components/navbar.html
@@ -5,6 +5,8 @@
   <a href="../pages/mood.html">Mood</a>
   <a href="../pages/insights.html">Insights</a>
   <a href="../pages/chatbot.html">Chatbot</a>
+  <a href="../pages/symptoms.html">Symptoms</a>
+
 
   <!-- ✅ Logout handled by app.js -->
   <a href="#" id="logoutBtn">Logout</a>
